lib/src/compiler/tests/testdata/errors/71.out
error[E001]: syntax error
 --> line:1:13
  |
1 | rule test : rule { condition: true }
  |             ^ expected identifier
  |